<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nyc.c4q.wesniemarcelin.finalexampractical.ProfileActivity">

    <ImageView
        android:id="@+id/profile_image2"
        android:layout_width="@dimen/profile_image"
        android:layout_height="@dimen/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/white_space"
        android:src="@drawable/group_image" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image2"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/heart_button"
                android:layout_width="@dimen/image_button"
                android:layout_height="@dimen/image_button"
                android:layout_margin="@dimen/button_margin"
                android:scaleType="fitXY"
                android:src="@drawable/heart_image" />

            <TextView
                android:id="@+id/heart_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heart_button"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/heart_button" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/mail_button"
                android:layout_width="@dimen/image_button"
                android:layout_height="@dimen/image_button"
                android:layout_margin="@dimen/button_margin"
                android:scaleType="fitXY"
                android:src="@drawable/mail_image" />

            <TextView
                android:id="@+id/mail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mail_button"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/mail_button" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/book_button"
                android:layout_width="@dimen/image_button"
                android:layout_height="@dimen/image_button"
                android:layout_margin="@dimen/button_margin"
                android:scaleType="fitXY"
                android:src="@drawable/book_image" />

            <TextView
                android:id="@+id/book_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_button"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/book_button" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/exit_button"
                android:layout_width="@dimen/image_button"
                android:layout_height="@dimen/image_button"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/button_margin"
                android:scaleType="fitXY"
                android:src="@drawable/x_image" />

            <TextView
                android:id="@+id/exit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/exit_button"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/escape_button" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
